--- a/livekit-agent/pyproject.toml
+++ b/livekit-agent/pyproject.toml
@@ -6,11 +6,15 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "livekit-agents[mcp]>=1.2.0",
+    "livekit-agents[openai]~=1.2",
     "livekit-plugins-openai>=1.0.0",
     "livekit-plugins-deepgram>=1.0.0",
     "livekit-plugins-silero>=1.0.0",
     "livekit-plugins-turn-detector>=1.0.0",
     "python-dotenv>=1.0.0",
+    "supabase>=2.3.0",
+    "twilio>=8.10.0",
+    "sendgrid>=6.10.0",
 ]
 
 [project.optional-dependencies]
