feat: Add CI/CD pipeline with GitHub Actions
🚀 CI/CD Features:
- ✅ Complete GitHub Actions workflow for testing and deployment
- ✅ Automated testing with pytest on every push/PR
- ✅ Automated deployment to LiveKit Cloud on main branch
- ✅ Environment variable validation and security
- ✅ Comprehensive CI/CD setup documentation

📁 New Files:
- .github/workflows/ci.yml - Complete CI/CD pipeline
- tests/ - Test suite with basic agent validation
- docs/CI_CD_SETUP.md - Complete setup and deployment guide

🔧 Technical Improvements:
- Added pytest for automated testing
- Secure secret management with GitHub Secrets
- Automated LiveKit Cloud deployment
- Environment validation and error handling
- Comprehensive documentation for setup

🎯 Ready for Production Deployment:
- Automated testing on every commit
- Secure deployment pipeline
- Environment variable management
- Complete setup documentation
- Monitoring and troubleshooting guides

--- a/livekit-agent/pyproject.toml
+++ b/livekit-agent/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "supabase>=2.3.0",
     "twilio>=8.10.0",
     "sendgrid>=6.10.0",
+    "pytest>=8.4.2",
 ]
 
 [project.optional-dependencies]
